--- a/2.html
+++ b/2.html
@@ -2,29 +2,37 @@
 <html>
 
 <head>
-<title>WEB1 - CSS</title>
-<meta charset="utf-8">
+  <title>WEB1 - CSS</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+    nightDayhandler(this);
+  ">
+  
+  <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
 
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-
-  <h2>CSS이란 무엇인가?</h2>
-  종속형 시트 또는 캐스케이딩 스타일 시트(영어: Cascading Style Sheet)는 마크업 언어<br>
-  가 실제 표시되는 방법을 기술하는 스타일 언어(영어: Style sheet language 스타일 시트<br>
-  랭귀지[*])로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준<br>
-  이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다.<br>
-  기본 파일명[2]은 style.css이다.<br>
-  <img src="coding2.jpg" width="30%">
-
+    <div id="article">
+        <h2>CSS이란 무엇인가?</h2>
+        <p>종속형 시트 또는 캐스케이딩 스타일 시트(영어: Cascading Style Sheet)는 마크업 언어
+          가 실제 표시되는 방법을 기술하는 스타일 언어(영어: Style sheet language 스타일 시트
+          랭귀지[*])로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준
+          이고, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
+          기본 파일명[2]은 style.css이다.</p>
+        <p>
+        <img src="coding2.jpg" width="40%">
+        </p>
+    </div>
+  </div>
 </body>
-
-
-
 </html>
